--- a/app/src/main/res/layout/activity_result.xml
+++ b/app/src/main/res/layout/activity_result.xml
@@ -3,7 +3,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    tools:context=".Result_Page">
 
     <Button
         android:id="@+id/returnbutton"
@@ -11,7 +12,6 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="50dp"
         android:text="@string/play_again"
-        android:onClick="newgame"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/results" />
